<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.productlist.ProductListActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        style="@style/Theme.Meli.Toolbar.Home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_menu"
            style="@style/Theme.Meli.IconButton"
            android:contentDescription="@string/description_menu"
            android:src="@drawable/ic_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_search_view_items"
            style="@style/Theme.Meli.Search"
            app:layout_constraintEnd_toStartOf="@+id/img_shopping_cart"
            app:layout_constraintStart_toEndOf="@+id/img_menu"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill,LabelFor,UnusedAttribute" />

        <ImageView
            android:id="@+id/img_shopping_cart"
            style="@style/Theme.Meli.IconButton"
            android:contentDescription="@string/description_shooing_Cart"
            android:src="@drawable/ic_shopping_cart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_12"
            android:layout_marginTop="@dimen/margin_10"
            android:src="@drawable/ic_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_menu"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/Theme.Meli.Text.Medium"
            android:layout_marginStart="@dimen/margin_6"
            android:layout_marginTop="@dimen/margin_8"
            android:drawablePadding="@dimen/padding_2"
            android:text="@string/text_example_location"
            app:drawableRightCompat="@drawable/ic_arrow_forward"
            app:layout_constraintStart_toEndOf="@+id/img_location"
            app:layout_constraintTop_toBottomOf="@+id/img_menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_product_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.meli.app.utils.CustomEmptyState
        android:id="@+id/empty_state"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>